k-labs/lab03/ingress/app1/app1-frontend-vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-frontend-vote
  namespace: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1-frontend-vote
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: app1-frontend-vote
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: app1-frontend-vote
        image: stv707/voteapp:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
