k-labs/lab03/ingress/app1/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  namespace: app1
  annotations:
   #Comment the nginx class to use Azure http routing , uncomment addon-http-application-routing 
   #kubernetes.io/ingress.class: "nginx"
   kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    # Change to app1.<azure_dns> 
  - host: app1.a5c3100ed8fc4222aae7.southeastasia.aksapp.io

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app1-frontend-vote
            port: 
              number: 80
